# numpy-quaddtype

./: README.md  meson.build  meson.options  pyproject.toml  reinstall.sh
.github/workflows/: build_docs.yml  pyodide.yml  test_old_cpu.yml
docs/: conf.py  index.md  installation.md
docs/api/: constants_api.md  functions.md  utilities.md
src/csrc/: dtype.c
src/csrc/umath/: comparison_ops.cpp
subprojects/: sleef.wrap
subprojects/packagefiles/qblas/: meson.build
subprojects/packagefiles/sleef/: fix-purecfma-scalar-x86.patch  meson.build  meson.options
tests/: test_multithreading.py  test_quaddtype.py
